refactor, price on header (not finished), img inheritance

--- a/src/app/components/app/app.html
+++ b/src/app/components/app/app.html
@@ -1,4 +1,8 @@
-<app-header></app-header>
+<app-header family-name="{{$ctrl.car.family.ModelDescription}}"
+            model-name="{{$ctrl.car.model.ModelDescription}}"
+            price="{{$ctrl.car.price}}"
+            on-back="$ctrl.onHeaderBack()"
+            theme="{{$ctrl.theme}}"></app-header>
 
 
 <div class="body"
