--- a/src/assets/styles/sass/partials/_colors.scss
+++ b/src/assets/styles/sass/partials/_colors.scss
@@ -7,6 +7,6 @@ $vw-dark: #2f3638;
 $vw-gray: #dee1e3;
 
 //Audi Colors
-$audi-special:#e00030;
-$audi-dark:#2e3532;
-$audi-gray:#54494b;
+$audi-special:#f72b2e;
+$audi-dark:#2b2e34;
+$audi-gray:#a4b3bb;
