--- a/src/app/components/app-header/appheader.html
+++ b/src/app/components/app-header/appheader.html
@@ -2,22 +2,23 @@
 
 	<a ng-show="!$ctrl.stateIs('app.select-family')"
 	   href
-	   ng-click="$ctrl.goBack()"
+	   ng-click="$ctrl.onBack()"
 	   class="previous pull-left">
 		<h2 class="text-center">
-			<strong><i class="fa fa-angle-double-left"></i> {{$ctrl.parent.car.family.ModelDescription}}</strong>
+			<strong><i class="fa fa-angle-double-left"></i> {{$ctrl.familyName}}</strong>
+			<small class="text-muted">{{$ctrl.modelName}}</small>
 		</h2>
 	</a>
 
 
 	<img class="logo"
-	     ng-src="./assets/img/{{$ctrl.parent.theme}}-logo.png"
-	     alt="{{$ctrl.parent.theme}} logo">
+	     ng-src="./assets/img/{{$ctrl.theme}}-logo.png"
+	     alt="{{$ctrl.theme}} logo">
 
 
 	<p ng-show="!$ctrl.stateIs('app.select-family')"
 	   class="price pull-right">
-		από {{$ctrl.parent.car.family.PriceBeforeTaxes | currency}}
+		από {{$ctrl.price | currency}}
 	</p>
 
 </div>
