--- a/src/app/components/select-options/steps/steps.html
+++ b/src/app/components/select-options/steps/steps.html
@@ -16,7 +16,7 @@
 	</li>
 	<li ui-sref-active="current">
 		<a ng-disabled="!$ctrl.stepsFlag[1]"
-		   ui-sref="app.select-options.step-three ({modelId: $ctrl.model.Code , colorId: $ctrl.color.id})">
+		   ui-sref="app.select-options.step-three ({modelId: $ctrl.model.Code , colorId: $ctrl.color.OptionCode})">
 			<i class="fa"
 			   ng-class="{'fa-circle-o':!$ctrl.stepsFlag[2], 'fa-check-circle': $ctrl.stepsFlag[2]}"></i>
 			<span class="hidden-xs ">Εξοπλισμός</span>
@@ -25,7 +25,7 @@
 
 	<li ui-sref-active="current">
 		<a ng-disabled="!$ctrl.stepsFlag[2]"
-		   ui-sref="app.select-options.step-four">
+		   ui-sref="app.select-options.step-four ({modelId: $ctrl.model.Code , colorId: $ctrl.color.OptionCode})">
 			<i class="fa"
 			   ng-class="{'fa-circle-o':!$ctrl.stepsFlag[3], 'fa-check-circle': $ctrl.stepsFlag[3]}"></i>
 			<span class="hidden-xs ">Σύνοψη</span>
