--- a/src/assets/styles/sass/partials/_figures.scss
+++ b/src/assets/styles/sass/partials/_figures.scss
@@ -24,8 +24,13 @@ body {
 	overflow: hidden;
 }
 
+.p-0 {
+	padding: 0 !important;
+}
+
+
 a:focus {
-	outline:none;
+	outline: none;
 }
 
 a[disabled=disabled] {
@@ -65,6 +70,25 @@ table.table.table-hover {
 		}
 	}
 }
+
+
+table.table-card td,
+table.table-card th {
+	margin: 8px 8px 8px 8px;
+	padding: 8px 8px 8px 8px;
+}
+
+table.table-card {
+	border-collapse: separate;
+	border-spacing: 10px;
+	*border-collapse: expression('separate', cellSpacing='10px');
+}
+
+td.va-middle {
+	vertical-align: middle;
+}
+
+
 
 div.body {
 	min-height: 780px;
