--- a/src/app/components/select-options/step-one/stepone.html
+++ b/src/app/components/select-options/step-one/stepone.html
@@ -16,9 +16,13 @@
 					    display-align="center"
 					    width="10%"></th>
 
+					<th field-name="Code"
+					    display-name="Κωδικός"
+					    width="15%"></th>
+
 					<th field-name="ModelDescription"
 					    display-name="Περιγραφή"
-					    width="40%"></th>
+					    width="30%"></th>
 
 					<th field-name="model.PowerKW"
 					    display-name="CC/PS/KW"
@@ -30,13 +34,13 @@
 					    display-name="Τιμή"
 					    display-align="center"
 					    display-format="trNgGridCurrency:gridItem"
-					    width="10%">
+					    width="15%">
 					</th>
 
 					<th field-name="CO2EmissionCombined"
 					    display-name="CO2"
 					    display-align="center"
-					    width="10%"></th>
+					    width="20%"></th>
 				</tr>
 			</thead>
 			<tbody>
