--- a/src/assets/styles/sass/partials/_car.scss
+++ b/src/assets/styles/sass/partials/_car.scss
@@ -1,7 +1,18 @@
 car {
+
+	a {
+		width:100%;
+		height:200px;
+		padding:50px;
+		display: block;
+		text-align:center;
+	}
+
 	a:hover,
 	a:focus {
 		cursor: pointer;
 		text-decoration: none;
 	}
+
+	
 }
