--- a/src/app/components/car/car.html
+++ b/src/app/components/car/car.html
@@ -6,7 +6,8 @@
 		     alt="{{$ctrl.car.description}}">
 		<div class="text-center">
 			<h3 class="m-t-sm">{{$ctrl.car.ModelDescription}}</h3>
-			<p class="m-t-sm">{{$ctrl.car.description}}</p>
+			<p class="m-t-sm">{{$ctrl.car.Code}}</p>
+
 		</div>
 	</a>
 </div>
