--- a/src/assets/styles/css/main.css
+++ b/src/assets/styles/css/main.css
@@ -273,6 +273,13 @@ app-footer {
   height: 100px;
   display: block; }
 
+car a {
+  width: 100%;
+  height: 200px;
+  padding: 50px;
+  display: block;
+  text-align: center; }
+
 car a:hover,
 car a:focus {
   cursor: pointer;
@@ -429,6 +436,18 @@ div.box {
   background-color: #2f3638;
   color: #fff; }
 
+.vw #loading-bar .bar {
+  background: #0099da;
+  height: 4px; }
+
+.vw #loading-bar-spinner .spinner-icon {
+  width: 18px;
+  height: 18px;
+  border: solid 4px transparent;
+  border-top-color: #0099da;
+  border-left-color: #0099da;
+  border-radius: 10px; }
+
 .audi app-header {
   background-color: #2b2e34; }
   .audi app-header a.previous:hover i {
@@ -478,6 +497,18 @@ div.box {
 .audi div.box div.box-header {
   background-color: #2b2e34;
   color: #fff; }
+
+.audi #loading-bar .bar {
+  background: #f72b2e;
+  height: 4px; }
+
+.audi #loading-bar-spinner .spinner-icon {
+  width: 18px;
+  height: 18px;
+  border: solid 4px transparent;
+  border-top-color: #f72b2e;
+  border-left-color: #f72b2e;
+  border-radius: 10px; }
 
 /*!
  *  Font Awesome 4.7.0 by @davegandy - http://fontawesome.io - @fontawesome
