implement pagination on step one (not finished)

--- a/src/app/components/select-options/step-four/stepfour.html
+++ b/src/app/components/select-options/step-four/stepfour.html
@@ -80,7 +80,7 @@
 							</tr>
 
 							<tr>
-								<th>Εξοπλισμός που προστέθηκε χειροκίνητα ({{$ctrl.equipment.manualEquipments && $ctrl.equipment.manualEquipments.length}})</th>
+								<th>Εξοπλισμός που προστέθηκε χειροκίνητα</th>
 
 								<td ng-show="!($ctrl.equipment.manualEquipments && $ctrl.equipment.manualEquipments.length)">-</td>
 
