--- a/src/app/components/select-options/step-one/stepone.html
+++ b/src/app/components/select-options/step-one/stepone.html
@@ -9,6 +9,7 @@
 		       selection-mode="SingleRow"
 		       enable-filtering="false"
 		       enable-sorting="false"
+			   on-data-required="ctrl.getModels(currentPage)"
 		       class="table table-hover">
 			<thead>
 				<tr>
