--- a/src/app/components/app/app.html
+++ b/src/app/components/app/app.html
@@ -1,4 +1,4 @@
-<app-header family-name="{{$ctrl.car.family.ModelDescription}}"
+<app-header family-name="{{$ctrl.car.family.Family}}"
             model-name="{{$ctrl.car.model.ModelDescription}}"
             price="{{$ctrl.car.price}}"
             on-back="$ctrl.onHeaderBack()"
