--- a/src/app/components/select-family/selectfamily.html
+++ b/src/app/components/select-family/selectfamily.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
 	<div class="row m-t-md">
-		<h1 class="text-center">Διαμορφώστε το {{$ctrl.make.ModelDescription}} σας</h1>
+		<h1 class="text-center">Διαμορφώστε το {{$ctrl.make.Make}} σας</h1>
 	</div>
 
 	<div class="row m-t-md">
