--- a/src/app/components/car/car.html
+++ b/src/app/components/car/car.html
@@ -1,11 +1,11 @@
 <div class="col-xs-12 col-sm-6 col-md-3 col-lg-2">
-	<a ng-click="$ctrl.onSelect({item:$ctrl.car})">
+	<a href ng-click="$ctrl.onSelect({item:$ctrl.car})">
 		<img class="img-responsive"
 		     err-src="{{$ctrl.defaultImg}}"
 		     ng-src="{{($ctrl.imgPath + $ctrl.car.Photo )|| '-'}}"
 		     alt="{{$ctrl.car.description}}">
 		<div class="text-center">
-			<h3 class="m-t-sm">{{$ctrl.car.ModelDescription}}</h3>
+			<h3 class="m-t-sm">{{$ctrl.car.Family}}</h3>
 			<p class="m-t-sm">{{$ctrl.car.Code}}</p>
 
 		</div>
