--- a/src/app/components/select-options/step-three/manual-equipment-form/manualequipment.html
+++ b/src/app/components/select-options/step-three/manual-equipment-form/manualequipment.html
@@ -40,6 +40,21 @@
 		<div class="row form-group">
 
 			<label for="code"
+			       class="col-md-1">CO2:</label>
+
+			<div class="col-md-8">
+				<input ng-model="$ctrl.equipment.co2"
+				       required
+				       type="number"
+				       class="form-control"
+				       placeholder="Συμπληρώστε το CO2">
+			</div>
+
+		</div>
+
+		<div class="row form-group">
+
+			<label for="code"
 			       class="col-md-1">Τιμή:</label>
 
 			<div class="col-md-8">
