--- a/src/assets/styles/sass/partials/_figures.scss
+++ b/src/assets/styles/sass/partials/_figures.scss
@@ -38,6 +38,15 @@ a[disabled=disabled] {
 	cursor: default;
 }
 
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+input[type="number"] {
+    -moz-appearance: textfield;
+}
+
 @media (min-width:768px) {
 	.row.vertical-align {
 		display: flex;
@@ -84,8 +93,16 @@ table.table-card {
 	*border-collapse: expression('separate', cellSpacing='10px');
 }
 
+table.table-card td {
+	line-height: 20px;
+}
+
 td.va-middle {
 	vertical-align: middle;
+}
+
+td[tr-ng-grid-footer-cell] {
+	display: none;
 }
 
 
